added a post view so that a user can click on a post in the list view and view a page specific to that post.

--- a/.jshintrc
+++ b/.jshintrc
@@ -21,6 +21,7 @@
     "smarttabs": true,
     "globals": {
         "angular": false,
+        "$location": false,
         "Firebase": false,
         "app": false
     }
